--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -1,6 +1,6 @@
 <div class="container" style="margin: 3% auto; font-size: 1.2rem;">
 
-    <div class="jumbotron">
+    <div class="jumbotron" style="padding: 2rem 4rem;">
         <h1 class="display-5">Admin panel</h1>
         <hr class="my-4">
 
@@ -62,6 +62,9 @@
 
                             <div formArrayName="incorrectAnswers">
                                 <label class="mr-2">Incorrect answers</label>
+                                <button type="button" class="btn btn-outline-success"
+                                    (click)="addIncorrectAnswer()">+</button>
+
                                 <div *ngFor="let item of answers.controls; let pointIndex=index"
                                     [formGroupName]="pointIndex">
 
@@ -69,7 +72,7 @@
                                         <input type="text" class="form-control mr-2" placeholder="Incorrect answer"
                                             formControlName="answer" />
                                         <div class="input-group-prepend">
-                                            <button type="button" class="btn btn-outline-danger m-2"
+                                            <button type="button" class="btn btn-outline-danger"
                                                 (click)="deleteIncorrectAnswer(pointIndex)">X</button>
                                         </div>
                                     </div>
@@ -78,8 +81,7 @@
                                     class="alert alert-danger">
                                     You must enter at least one incorrect answer.
                                 </div>
-                                <button type="button" class="btn btn-outline-success"
-                                    (click)="addIncorrectAnswer()">+</button>
+
                             </div>
 
                             <div class="float-right">
