--- a/client/src/app/custom-game/custom-game.component.html
+++ b/client/src/app/custom-game/custom-game.component.html
@@ -6,7 +6,7 @@
             </div>
 
             <div class="row text-left">
-                <span class="h3">Question</span>
+                <span class="h1">Question</span>
             </div>
 
             <hr class="my-2">
@@ -14,12 +14,16 @@
 
 
             <div class="row">
-                <div class="col" *ngFor="let answer of currentQuestion?.answers; let i = index">
+                <div class="col-md" *ngFor="let answer of currentQuestion?.answers; let i = index">
                     <div class="card border-{{answerColorDisplay[i]}} mb-3" style="max-width: 20rem;">
-                        <div class="card-body" (click)="checkAnswer(currentQuestion.questionId, answer, i)">
+                        <button class="btn btn-outline-secondary" style="padding: 2rem; margin: 5%; font-size: 18px;"
+                            (click)="checkAnswer(currentQuestion.questionId, answer, i)" [disabled]="isAnswered">
                             {{answer}}
-                        </div>
+                        </button>
                     </div>
+                </div>
+                <div *ngIf="isAnswered" class="text-center">
+                    <p class="text-{{answerType}}" style="font-size: 2rem;">{{answerResult}}</p>
                 </div>
             </div>
 
