--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -26,13 +26,14 @@
 
         <!-- Dropdown -->
         <li class="nav-item dropdown" dropdown *ngIf="(authService.currentUser$ | async) !== null">
-            <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
+            <a dropdownToggle type="button" class="nav-link dropdown-toggle">
                 <mdb-icon fas icon="user"></mdb-icon> Profile<span class="caret"></span>
             </a>
             <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
                 <ng-container>
-                    <a class="dropdown-item waves-light" mdbWavesEffect href="#">My account</a>
-                    <a class="dropdown-item waves-light" mdbWavesEffect (click)="logout()">Log out</a>
+                    <a class="dropdown-item">My account</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" (click)="logout()">Log out</a>
                 </ng-container>
             </div>
         </li>
