--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,42 +1,43 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" routerLink="">Quizzy</a>
+    <div class="container-fluid">
+        <a class="navbar-brand" routerLink="">Quizzy</a>
 
-    <ul class="navbar-nav ml-auto">
-        <form *ngIf="(authService.currentUser$ | async) === null" #loginForm="ngForm" class="form-inline mt-2 mt-md-0"
-            (ngSubmit)="login()" autocomplete="off">
-            <input name="username" [(ngModel)]="model.email" class="form-control mr-sm-2" type="text"
-                placeholder="Login">
-            <input name="password" [(ngModel)]="model.password" class="form-control mr-sm-2" type="password"
-                placeholder="Password">
-            <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
-        </form>
-
-        <ng-container *ngIf="authService.currentUser$ | async">
-            <li class="nav-item" *appHasRole='["Admin", "Moderator"]'>
-                <a class="nav-link " routerLink="/admin">
-                    <button class="fas fa-users-cog"></button> Admin panel
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link">
-                    <mdb-icon fas icon="users"></mdb-icon> Leaderboards
-                </a>
-            </li>
-        </ng-container>
-
-        <!-- Dropdown -->
-        <li class="nav-item dropdown" dropdown *ngIf="(authService.currentUser$ | async) !== null">
-            <a dropdownToggle type="button" class="nav-link dropdown-toggle">
-                <mdb-icon fas icon="user"></mdb-icon> Profile<span class="caret"></span>
-            </a>
-            <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
-                <ng-container>
-                    <a class="dropdown-item">My account</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" (click)="logout()">Log out</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+                <ng-container *ngIf="authService.currentUser$ | async">
+                    <li class="nav-item" *appHasRole='["Admin", "Moderator"]'>
+                        <a class="nav-link " routerLink="/admin">
+                            <button class="fas fa-users-cog"></button> Admin panel
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link">
+                            <mdb-icon fas icon="users"></mdb-icon> Leaderboards
+                        </a>
+                    </li>
                 </ng-container>
-            </div>
-        </li>
 
-    </ul>
+                <li class="nav-item dropdown" dropdown *ngIf="(authService.currentUser$ | async) !== null">
+                    <a dropdownToggle type="button" class="nav-link dropdown-toggle">
+                        <mdb-icon fas icon="user"></mdb-icon> Profile<span class="caret"></span>
+                    </a>
+                    <div *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu">
+                        <a class="dropdown-item" href="">My account</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="" (click)="logout()">Logout</a>
+                    </div>
+                </li>
+
+            </ul>
+
+            <form *ngIf="(authService.currentUser$ | async) === null" #loginForm="ngForm" class="form-inline"
+                (ngSubmit)="login()" autocomplete="off">
+                <input name="username" [(ngModel)]="model.email" class="form-control mr-sm-2" type="text"
+                    placeholder="Login">
+                <input name="password" [(ngModel)]="model.password" class="form-control mr-sm-2" type="password"
+                    placeholder="Password">
+                <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
+            </form>
+        </div>
+    </div>
 </nav>
